# bazelrio

./: README.md
.github/workflows/: build-example.yaml  generate_deps_files.yml
bazelrio/: defs.bzl  deps.bzl  deps_utils.bzl
bazelrio/dependencies/colorsensor/: deps.bzl
bazelrio/dependencies/imgui/: deps.bzl
bazelrio/dependencies/imgui/1_88_4/: deps.bzl
bazelrio/dependencies/libssh/: deps.bzl
bazelrio/dependencies/navx/: deps.bzl
bazelrio/dependencies/ni/: deps.bzl
bazelrio/dependencies/opencv/: deps.bzl
bazelrio/dependencies/opencv/4_5_5_3/: deps.bzl
bazelrio/dependencies/phoenix/: deps.bzl
bazelrio/dependencies/phoenix/5_30_4_23_0_10/: deps.bzl
bazelrio/dependencies/phoenix/5_30_4_23_0_11/: deps.bzl
bazelrio/dependencies/phoenix/5_30_4_23_0_12/: deps.bzl
bazelrio/dependencies/phoenix/5_30_4_23_0_8/: deps.bzl
bazelrio/dependencies/phoenixpro/: deps.bzl
bazelrio/dependencies/revlib/: deps.bzl
bazelrio/dependencies/sparkmax/: deps.bzl
bazelrio/dependencies/wpilib/: deps.bzl
bazelrio/libraries/hal/: BUILD
bazelrio/libraries/ntcore/: BUILD
bazelrio/libraries/wpilibc/: BUILD
bazelrio/libraries/wpimath/: BUILD
bazelrio/libraries/wpiutil/: BUILD
bazelrio/toolchains/roborio/: toolchain_config.bzl
example/: .bazelrc
examples/cpp_example/: .bazelrc
examples/java_example/src/main/java/frc/robot/: BUILD.bazel  Robot.java
examples/kotlin_example/: WORKSPACE
scripts/: deps.py  generate_dependencies.py  imgui_dependencies.py  libssh_dependencies.py  opencv_dependencies.py  wpilib_dependencies.py
(+46 files in other folders)
