load("@bazelrio//:defs.bzl", "robot_java_binary")

# TODO update to use aliases when they exist
robot_java_binary(
    name = "robot",
    srcs = glob(["*.java"]),
    main_class = "frc.robot.Main",
    team_number = "3504",
    deps = [
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/kauailabs/navx",
        "@bazelrio//libraries/java/rev/colorsensor",
        "@bazelrio//libraries/java/rev/sparkmax",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
    ],
)
